[package]
name = "ayasha_rf"
version = "0.1.0"
authors = ["Bodaway"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serial = "0.4.0"
snafu = "0.6.7"
#r2d2 = "0.8.8"
#lazy_static ="1.4.0"
#serde = { version = "1.0.110", features = ["derive"] }
#serde_json = "1.0.53"
##libsqlite3-sys = { version = "*", features = ["bundled"] }
chrono = { version = "0.4.11", features = ["serde"] }
#log = "0.4.8"
#syslog = "5.0.0"
rusqlite = { version = "0.23.1", features = ["chrono"]}
downcast-rs = "1.1.1"
refinery = { version = "0.3", features = ["rusqlite"]}

