[package]
name = "ayasha_rf"
version = "0.1.0"
authors = ["Bodaway"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.8"
chrono = { version = "0.4.15", features = ["serde"] }
tokio = { version="0.2.22", features = ["full"]}
tokio-serial = "4.3.3"
tokio-util = {version="0.3.1", features=["codec"]}
futures ="0.3.5"
bytes = "0.5.6"
hyper = "0.13.7"